--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -18,7 +18,18 @@
   border: none;
   cursor: pointer;
 }
-.icons-light-header{
-    font-size: 25px;
-    color:white;
+.icons-light-header {
+  font-size: 25px;
+  color: white;
+}
+.d-flex {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 10px 5px;
+
+}
+
+.pop-up {
+  width: 20%;
 }
