--- a/src/components/Home/index.css
+++ b/src/components/Home/index.css
@@ -42,16 +42,18 @@
   display: flex;
   margin-top: 20px;
   margin-bottom: 20px;
+  align-items: center;
 }
 .input-search {
   width: 30%;
-  margin-left: 20px;
+  margin-left: 10px;
+  height: 30px;
 }
 .search-icon {
   background-color: #e2e8f0;
   padding: 5px;
-  font-size: 30px;
-  padding-left: 10px;
+  font-size: 40px;
+  padding-left: 5px;
   border: 0.5px solid #616e7c;
 }
 .retry-btn {
@@ -86,4 +88,9 @@
 .light {
   color: #231f20;
   margin: 5px;
+}
+
+.search-iconb {
+  border: none;
+  height: 30px;
 }
